jQuery window width fixture
fixed the bug of $(window).width and added rhyo.html

--- a/projects/rhyo.html
+++ b/projects/rhyo.html
@@ -67,7 +67,7 @@
 		<div id="header">
 		
         <p class="title">
-			<a href="http://nong-nong.com/">Nong&nbsp;Chotipatoomwan<span>&nbsp;&times;&nbsp;Landing Space</span></a>
+			<a href="http://nong-nong.com/">Nong&nbsp;Chotipatoomwan<span>&nbsp;&times;&nbsp;Rhyo</span></a>
         </p>
 
         <ul>
@@ -82,8 +82,7 @@
 					<a href="https://www.instagram.com/nong_kornpetch/" target="_blank">Instagram</a><br/>
        		</p>
 		</li>
-		</ul>  
-             
+		</ul>        
         </div>
 		
 		
@@ -94,62 +93,47 @@
 		
 		<div id="top_space"></div>
         <p class="image1">
-            <img src="../images/ls.jpg" alt="NULL">
+            <img src="../images/rhyo.jpg" alt="NULL">
         </p>
         <p class="cap">
-                Landing Space
+                Rhyo
         </p>
         <p class="ref">
-           2017<br/>
-            ash, steel, wool, polyester
+           2017
         </p>
         <p class="ref">
-       A set of apparatus that supports the changing needs of mobile workers<br/><br/>
+       A tasklight timer that encourages the habit of taking breaks from digital screens.<br/><br/>
 
 BACKGROUND<br/>
-Landing Space is about the changing landscape of work culture. The advancement of mobile devices and digital technology has opened the door to a workplace, where people can perform a variety of tasks in all different kind of settings. While this recent development in mobile technology originated only 6 years ago, it has completely transformed the working environment and modern working landscape cannot keep up. With this flexible in time and place, it is crucial to provide people with the right space that suit their needs and tasks.<br/><br/>
+The world we live in now revolve around digital tools and portable devices whether it’s for work or personal uses. As people of all ages are spending more hours on digital screens, it’s also crucial to take breaks as prolonged staring can seriously harm one’s vision and well-being. A paper published by the American Macular Degeneration Foundation (AMDF) reports that the blue light accelerate age-related macular degeneration (AMD) and constant exposure to blue light can damage retina cells and once damaged, retina cells do not regenerate. It is an issue that many do not realize exists. Current technique to reduce digital eye strains are often unpractical, distracting and inefficient. <br/><br/>
 
 PROJECT<br/>
-Landing Space is a set of apparatus that aims to satisfy the changing needs of mobile workers in in-between spaces: cafes, co-working spaces and meeting areas where private and public domain converge. The set consists of a Screen Table, One a half chair and Charging Tree; each serving different functions in the space. <br/><br/>
+Rhyo uses different temperature and brightness to notify and schedule brief periods of intermission within a workflow. The intention is to encourage a healthy habit of balancing between work and rest, reducing symptoms of digital eye strain as much as possible. Rhyo also fits into shared work spaces where people can temporarily take ownership of the light via bluetooth connection. <br/><br/>
 
-The key element to well being in a space is a space that encourages connection, supports variety of workstyles and allowing people freely to move around.  <br/><br/>
+“The brain and body are not machines.<br/>
+They are organism with a natural rhythm of activity and rest cycles.”<br/>
+–Steelcase 360 Magazine/ issue70/ Think Better
+<br/><br/>
 
 Redefining ‘in between’ spaces
 where people temporarily take ownership of the space, form relationships and interact with the changing environment. 
 <br/>
     </p>
-        <img class="lazy image" data-original="../images/ls1.jpg" alt="NULL">
+        <iframe src="https://player.vimeo.com/video/235807445" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 			<p class="image"></p>
-        <img class="lazy image" data-original="../images/ls2.jpg" alt="NULL">
     <p class="ref1">
-       Screen table<br/><br/>
+     EVIDENCE<br/>
+Light is made up of electromagnetic particles that travel in waves, the shorter the wavelength; the higher the energy. Specifically, blue light, which emits from any digital screen, has a very short wavelength, and therefore produces a higher amount of energy.<br/>
 
-Focus, work and organise<br/><br/>
+Research shows that 43% of adult’s work required prolong use of digital devices and that 70% of adults who report regular use of digital device experienced what is called the symptoms of Digital eye strain: dry eyes, difficulty in focusing, headaches, blurred vision and back pain.<br/><br/>
 
-Screen Table is a modular and highly flexible work table, where each components can be adjusted according to different tasks and needs. The screen can be removed or inserted over a different table leg so that worker can focus on their own task or share when they need to. The small tray helps keep personal belonging and workspace organised when on the go. 
-<br/><br/><br/><br/>
-    </p>
-        <img class="lazy image" data-original="../images/ls3.jpg" alt="NULL">
-			<p class="image"></p>
-        <img class="lazy image" data-original="../images/ls4.jpg" alt="NULL">
-      <p class="ref1">
-       One and a half chair<br/><br/>
+Constant exposure to blue light can damage retina cells once damaged, retina cells do not regenerate.<br/>
+–American Macular Degeneration Foundation (AMDF)<br/><br/>
 
-Support, interact and move<br/><br/>
+Numerous studies have shown that by simply taking brief diversions from a task, not only lowers symptoms of digital eye strain, but dramatically increase productivity and improve one’s ability to focus on the task at hand.<br/>
 
-One and a half chair supports sit, lean, alone or social activities. The D-shaped back sits just at the waist to provide lumbar support.
+Light is one of the most natural ways we experience the passage of time as our body’s physical, mental and behavioral changes respond primarily to the light and darkness of our environment.
 
-<br/><br/><br/><br/>
-    </p>
-        <img class="lazy image" data-original="../images/ls5.jpg" alt="NULL">
-			<p class="image"></p>
-        <img class="lazy image" data-original="../images/ls6.jpg" alt="NULL">
-      <p class="ref1">
-       Charging tree<br/><br/>
-
-Recharge, interact and connect<br/><br/>
-
-Charging Tree is a mini social hub that supports social activities and encourages people to stand up and connect in co-working and public spaces.
 <br/><br/><br/><br/>
     </p>
 			
