--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <div id="mySidenav" class="sidenav"> <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <p class="who"> <span class="b white">Nong Chotipatoomwan</span> is Thai designer based in London. </p>
+  <p class="who"> <span class="b white">Nong Chotipatoomwan</span> is Thai designer based in London / Bangkok.</p>
   <p class="who content"> <br/>
     hello@nong-nong.com<br/>
     http://nong-nong.com<br/>
