added collection13 page

--- a/projects/collection13.html
+++ b/projects/collection13.html
@@ -3,7 +3,7 @@
 <title>nong-nong.com</title>
 <!-- inital scale -->
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="../style.css">
 <body>
 
 <div id="mySidenav" class="sidenav"> <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -72,7 +72,7 @@
 
 <!-- Menu here -->
 <div id="header">
-  <p class="title"> <a href="http://nong-nong.com/">Nong&nbsp;Chotipatoomwan</a> </p>
+  <p class="title"> <a href="http://nong-nong.com/">Nong&nbsp;Chotipatoomwan<span>&nbsp;&times;&nbsp;Collection 13</span></a> </p>
   <ul>
     <li> <span onclick="openNav()">Info</span> </li>
     <li> <span>Contact</span>
@@ -88,42 +88,28 @@
 <div id="wrapper">
   <div id="white"></div>
   <div id="top_space"></div>
-  <div class="container">
-    <div class="item one">
-      <p class="year">2017</p>
-      <a href="projects/landingspace.html"><img class="lazyFade" src="images/ls_cap.gif">
-      <p class="name">Landing Space</p>
-      </a></div>
-    <div class="item two">
-      <p class="year">2017</p>
-      <a href="projects/rhyo.html"><img class="lazyFade" src="images/7.jpg">
-      <p class="name">Rhyo</p>
-      </a></div>
-    <div class="item three">
-      <p class="year">2017</p>
-      <a href="projects/collection13.html"><img class="lazyFade" src="images/8.jpg">
-      <p class="name">Collection 13</p>
-      </a></div>
-    <div class="item four">
-      <p class="year">2017</p>
-      <a href="projects/rhyo.html"><img class="lazyFade" src="images/4.jpg">
-      <p class="name">VEHO</p>
-      </a></div>
-    <div class="item five">
-      <p class="year">2017</p>
-      <a href=""><img class="lazyFade" src="images/5.jpg">
-      <p class="name">CUP CUP CUP</p>
-      </a></div>
-    <div class="item six">
-      <p class="year">2017</p>
-      <a href=""><img class="lazyFade" src="images/6.jpg">
-      <p class="name">Watch</p>
-      </a></div>
-  </div>
+  <p class="image1"> <img src="../images/cl.jpg" alt="NULL"> </p>
+  <p class="cap"> Collection 13 </p>
+  <p class="ref"> 2013<br/>
+	ceramics, glass</p>
+  <p class="ref">A ceramic collection reflecting illusion, unity and constructionism.<br/>
+    <br/>
+    BACKGROUND<br/>
+    This ceramic collection was inspired by the Maison Martin Margiela home objects collection 13, which came from the designer’s collaboration with Maison Champs Elysées Hotel.	
+Collection 13’s design is based on trompe l’oeil (illusion), deconstructionism and a sense of unity through a lack of identity.
+<br/>
+   </p>
+  <img class="lazy image lazy1" data-original="../images/cl2.jpg" alt="NULL">
+    <p class="image"></p>
+  <img class="lazy image lazy1" data-original="../images/cl3.jpg" alt="NULL">
+   <p class="ref1">
+    <br/>
+    A wine bottle was chosen to illustrate uniformity because it is an easily found and recognizable object. The label was exaggerated to highlight the blank space where the label is used for noting the origin of the grapes.<br/>
+  </p>
+  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> 
+  <script src="../jquery.lazyload.min.js"></script> 
+  <script src="../nong-nong.js"></script> 
 </div>
 
-<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> 
-<script src="jquery.lazyload.min.js"></script> 
-<script src="nong-nong.js"></script>
 </body>
 </html>
