--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <title>nong-nong.com</title>
 <!-- inital scale -->
+<meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
 <body>
@@ -100,8 +101,8 @@
       <p class="name">Rhyo</p>
       </a></div>
     <div class="item three">
-      <p class="year">2017</p>
-      <a href="projects/collection13.html"><img class="lazyFade" src="images/8.jpg">
+      <p class="year">2013</p>
+      <a href="projects/collection13.html"><img class="lazyFade" src="images/8_1.jpg">
       <p class="name">Collection 13</p>
       </a></div>
     <div class="item four">
