--- a/projects/collection13.html
+++ b/projects/collection13.html
@@ -2,6 +2,7 @@
 <html>
 <title>nong-nong.com</title>
 <!-- inital scale -->
+<meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <link rel="stylesheet" href="../style.css">
 <body>
@@ -101,7 +102,7 @@ Collection 13’s design is based on trompe l’oeil (illusion), deconstructioni
    </p>
   <img class="lazy image lazy1" data-original="../images/cl2.jpg" alt="NULL">
     <p class="image"></p>
-  <img class="lazy image lazy1" data-original="../images/cl3.jpg" alt="NULL">
+  <img class="lazy image" data-original="../images/cl3.jpg" alt="NULL">
    <p class="ref1">
     <br/>
     A wine bottle was chosen to illustrate uniformity because it is an easily found and recognizable object. The label was exaggerated to highlight the blank space where the label is used for noting the origin of the grapes.<br/>
