--- a/projects/piccolo.html
+++ b/projects/piccolo.html
@@ -4,7 +4,7 @@
 <!-- inital scale -->
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="../style.css">
 <body>
 
 <div id="mySidenav" class="sidenav"> <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -73,7 +73,7 @@
 
 <!-- Menu here -->
 <div id="header">
-  <p class="title"> <a href="http://nong-nong.com/">Nong&nbsp;Chotipatoomwan</a> </p>
+  <p class="title"> <a href="http://nong-nong.com/">Nong&nbsp;Chotipatoomwan<span>&nbsp;&times;&nbsp;Piccolo Teatro</span></a> </p>
   <ul>
     <li> <span onclick="openNav()">Info</span> </li>
     <li> <span>Contact</span>
@@ -89,52 +89,43 @@
 <div id="wrapper">
   <div id="white"></div>
   <div id="top_space"></div>
-  <div class="container">
-    <div class="item one">
-      <p class="year">2017</p>
-      <a href="projects/landingspace.html"><img class="lazyFade" src="images/ls_cap900.gif">
-      <p class="name">Landing Space</p>
-      </a></div>
-    <div class="item two">
-      <p class="year">2017</p>
-      <a href="projects/rhyo.html"><img class="lazyFade" src="images/7.jpg">
-      <p class="name">Rhyo</p>
-      </a></div>
-    <div class="item three">
-      <p class="year">2015</p>
-      <a href="projects/caliper.html"><img class="lazyFade" src="images/c1.jpg">
-      <p class="name">Caliper Lighting</p>
-      </a></div>
-    <div class="item four">
-      <p class="year">2015</p>
-      <a href="projects/jbaldessari.html"><img class="lazyFade" src="images/johnbaldessari.jpg">
-      <p class="name">John Baldessari x Samsung</p>
-      </a></div>
-    <div class="item five">
-      <p class="year">2013</p>
-      <a href="projects/forevergold.html"><img class="lazyFade" src="images/fgold.jpg">
-      <p class="name">Forever Gold</p>
-      </a></div>
-    <div class="item six">
-      <p class="year">2013</p>
-      <a href="projects/collection13.html"><img class="lazyFade" src="images/8_1.jpg">
-      <p class="name">Collection 13</p>
-      </a></div>
-    <div class="item seven">
-      <p class="year">2012</p>
-      <a href="projects/veho.html"><img class="lazyFade" src="images/veho.jpg">
-      <p class="name">Veho Helmet</p>
-      </a></div>
-    <div class="item eight">
-      <p class="year">2012</p>
-      <a href="projects/piccolo.html"><img class="lazyFade" src="images/pt1.jpg">
-      <p class="name">Piccolo Teatro</p>
-      </a></div>
-  </div>
+  <p class="image1"> <img src="../images/pt2.jpg" alt="NULL"> </p>
+  <p class="cap"> Piccolo Teatro </p>
+  <p class="ref"> 2012 </p>
+  <p class="ref"> A night light made from a single 12x36” acrylic sheet<br/>
+    <br/>
+    The goal of the project was to utilize a 12x36” acrylic sheet with a laser cutting method to create a market-ready product. Since plastic is generally viewed as a cheap material, creating an emotional connection with the user is an important aspect of this project.<br/>
+    <br/>
+    <br/>
+    <br/>
+  </p>
+  <img class="lazy image" data-original="../images/pt3.jpg" alt="NULL">
+  <p class="ref1"> Piccolo Teatro (little theater) tells the story of different moments in time and place. Each scene has its own story and is interchangeable depending on the user’s preference.<br/>
+    <br/>
+    <br/>
+    <br/>
+  </p>
+  <img class="lazy image" data-original="../images/pts1.jpg" alt="NULL">
+  <p class="image"></p>
+  <img class="lazy image" data-original="../images/pts2.jpg" alt="NULL">
+  <p class="image"></p>
+  <img class="lazy image" data-original="../images/pts3.jpg" alt="NULL">
+  <p class="ref1"> The box fits together by pressure. No glue is required in the assembly.<br/>
+The lamp can be viewed at 4 different angles by changing the position of the foot.
+<br/>
+    <br/>
+    <br/>
+    <br/>
+  </p>
+  <img class="lazy image" data-original="../images/ptt1.jpg" alt="NULL">
+  <p class="image"></p>
+  <img class="lazy image" data-original="../images/ptt2.jpg" alt="NULL">
+  <p class="image"></p>
+  
+  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> 
+  <script src="../jquery.lazyload.min.js"></script> 
+  <script src="../nong-nong.js"></script> 
 </div>
 
-<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> 
-<script src="jquery.lazyload.min.js"></script> 
-<script src="nong-nong.js"></script>
 </body>
 </html>
