--- a/projects/jbaldessari.html
+++ b/projects/jbaldessari.html
@@ -4,7 +4,7 @@
 <!-- inital scale -->
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="../style.css">
 <body>
 
 <div id="mySidenav" class="sidenav"> <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -73,7 +73,7 @@
 
 <!-- Menu here -->
 <div id="header">
-  <p class="title"> <a href="http://nong-nong.com/">Nong&nbsp;Chotipatoomwan</a> </p>
+  <p class="title"> <a href="http://nong-nong.com/">Nong&nbsp;Chotipatoomwan<span>&nbsp;&times;&nbsp;John Baldessari x Samsung</span></a> </p>
   <ul>
     <li> <span onclick="openNav()">Info</span> </li>
     <li> <span>Contact</span>
@@ -89,52 +89,24 @@
 <div id="wrapper">
   <div id="white"></div>
   <div id="top_space"></div>
-  <div class="container">
-    <div class="item one">
-      <p class="year">2017</p>
-      <a href="projects/landingspace.html"><img class="lazyFade" src="images/ls_cap900.gif">
-      <p class="name">Landing Space</p>
-      </a></div>
-    <div class="item two">
-      <p class="year">2017</p>
-      <a href="projects/rhyo.html"><img class="lazyFade" src="images/7.jpg">
-      <p class="name">Rhyo</p>
-      </a></div>
-    <div class="item three">
-      <p class="year">2015</p>
-      <a href="projects/caliper.html"><img class="lazyFade" src="images/c1.jpg">
-      <p class="name">Caliper Lighting</p>
-      </a></div>
-    <div class="item four">
-      <p class="year">2015</p>
-      <a href="projects/jbaldessari.html"><img class="lazyFade" src="images/johnbaldessari.jpg">
-      <p class="name">John Baldessari x Samsung</p>
-      </a></div>
-    <div class="item five">
-      <p class="year">2013</p>
-      <a href="projects/forevergold.html"><img class="lazyFade" src="images/fgold.jpg">
-      <p class="name">Forever Gold</p>
-      </a></div>
-    <div class="item six">
-      <p class="year">2013</p>
-      <a href="projects/collection13.html"><img class="lazyFade" src="images/8_1.jpg">
-      <p class="name">Collection 13</p>
-      </a></div>
-    <div class="item seven">
-      <p class="year">2012</p>
-      <a href="projects/veho.html"><img class="lazyFade" src="images/veho.jpg">
-      <p class="name">Veho Helmet</p>
-      </a></div>
-    <div class="item eight">
-      <p class="year">2012</p>
-      <a href="projects/piccolo.html"><img class="lazyFade" src="images/pt1.jpg">
-      <p class="name">Piccolo Teatro</p>
-      </a></div>
-  </div>
+  <p class="image1"> <img src="../images/jb.jpg" alt="NULL"> </p>
+  <p class="cap"> John Baldessari x Samsung </p>
+  <p class="ref"> 2015 <br/>
+    Brass, festoon led, wiring </p>
+  <p class="ref"> A set of apparatus that supports the changing needs of mobile workers<br/>
+    <br/>
+    The retro-classic interior of the Raging Bull Chophouse in Shangrila Manila celebrates wood and metal craftsmanship in detail. The Caliper composed of 100 individually-crafted and layered metal calipers shaped like bull horns. The challenge for this design was figuring out the led detail and feeding the positive and negative current through the brass plate. <br/>
+  </p>
+  <img class="lazy image" data-original="../images/jb1.jpg" alt="NULL">
+  <p class="image"></p>
+  <img class="lazy image" data-original="../images/jb2.jpg" alt="NULL" style="width: 40vw;">
+  <p class="image"></p>
+  <img class="lazy image" data-original="../images/jb3.jpg" alt="NULL">
+  
+  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> 
+  <script src="../jquery.lazyload.min.js"></script> 
+  <script src="../nong-nong.js"></script> 
 </div>
 
-<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> 
-<script src="jquery.lazyload.min.js"></script> 
-<script src="nong-nong.js"></script>
 </body>
 </html>
