--- a/projects/veho.html
+++ b/projects/veho.html
@@ -4,7 +4,7 @@
 <!-- inital scale -->
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="../style.css">
 <body>
 
 <div id="mySidenav" class="sidenav"> <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -73,7 +73,7 @@
 
 <!-- Menu here -->
 <div id="header">
-  <p class="title"> <a href="http://nong-nong.com/">Nong&nbsp;Chotipatoomwan</a> </p>
+  <p class="title"> <a href="http://nong-nong.com/">Nong&nbsp;Chotipatoomwan<span>&nbsp;&times;&nbsp;Veho Helmet</span></a> </p>
   <ul>
     <li> <span onclick="openNav()">Info</span> </li>
     <li> <span>Contact</span>
@@ -89,52 +89,33 @@
 <div id="wrapper">
   <div id="white"></div>
   <div id="top_space"></div>
-  <div class="container">
-    <div class="item one">
-      <p class="year">2017</p>
-      <a href="projects/landingspace.html"><img class="lazyFade" src="images/ls_cap900.gif">
-      <p class="name">Landing Space</p>
-      </a></div>
-    <div class="item two">
-      <p class="year">2017</p>
-      <a href="projects/rhyo.html"><img class="lazyFade" src="images/7.jpg">
-      <p class="name">Rhyo</p>
-      </a></div>
-    <div class="item three">
-      <p class="year">2015</p>
-      <a href="projects/caliper.html"><img class="lazyFade" src="images/c1.jpg">
-      <p class="name">Caliper Lighting</p>
-      </a></div>
-    <div class="item four">
-      <p class="year">2015</p>
-      <a href="projects/jbaldessari.html"><img class="lazyFade" src="images/johnbaldessari.jpg">
-      <p class="name">John Baldessari x Samsung</p>
-      </a></div>
-    <div class="item five">
-      <p class="year">2013</p>
-      <a href="projects/forevergold.html"><img class="lazyFade" src="images/fgold.jpg">
-      <p class="name">Forever Gold</p>
-      </a></div>
-    <div class="item six">
-      <p class="year">2013</p>
-      <a href="projects/collection13.html"><img class="lazyFade" src="images/8_1.jpg">
-      <p class="name">Collection 13</p>
-      </a></div>
-    <div class="item seven">
-      <p class="year">2012</p>
-      <a href="projects/veho.html"><img class="lazyFade" src="images/veho.jpg">
-      <p class="name">Veho Helmet</p>
-      </a></div>
-    <div class="item eight">
-      <p class="year">2012</p>
-      <a href="projects/piccolo.html"><img class="lazyFade" src="images/pt1.jpg">
-      <p class="name">Piccolo Teatro</p>
-      </a></div>
-  </div>
+  <p class="image1"> <img src="../images/veho.JPG" alt="NULL"> </p>
+  <p class="cap"> Veho Helmet </p>
+  <p class="ref"> 2012<br/>
+    vinyl, poron XRD urethanes</p>
+  <p class="ref"> A portable helmet for urbanites.<br/>
+    <br/>
+    The Veho is part of the Design for Entrepreneurship class. The brief was to successfully market a product through user and market research, and business model generation. <br/>
+    <br/>
+Veho helmet is designed for urbanites that wants the safety of travelling as well as looking good in their helmets. The helmet is soft which allows it to be folded and stored in the bag after the user gets to the destination. <br/>
+    <br/>
+Collaborated with Eduardo Schmidt and Olga Rocha (Brown University engineering students)
+ <br/>
+  </p>
+  <img class="lazy image" data-original="../images/vh1.jpg" alt="NULL">
+  <p class="image"></p>
+  <img class="lazy image" data-original="../images/vh2.jpg" alt="NULL">
+  <p class="image"></p>
+  <img class="lazy image" data-original="../images/vh3.jpg" alt="NULL">
+  <p class="image"></p>
+  <img class="lazy image" data-original="../images/vh4.jpg" alt="NULL">
+  <p class="image"></p>
+  <img class="lazy image" data-original="../images/vh5.jpg" alt="NULL">
+
+  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> 
+  <script src="../jquery.lazyload.min.js"></script> 
+  <script src="../nong-nong.js"></script> 
 </div>
 
-<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> 
-<script src="jquery.lazyload.min.js"></script> 
-<script src="nong-nong.js"></script>
 </body>
 </html>
