changed some images and text modification

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </a></div>
     <div class="item seven">
       <p class="year">2012</p>
-      <a href="projects/veho.html"><img class="lazyFade" src="images/veho.jpg">
+      <a href="projects/veho.html"><img class="lazyFade" src="images/veho.JPG">
       <p class="name">Veho Helmet</p>
       </a></div>
     <div class="item eight">
