--- a/projects/jbaldessari.html
+++ b/projects/jbaldessari.html
@@ -92,17 +92,20 @@
   <p class="image1"> <img src="../images/jb.jpg" alt="NULL"> </p>
   <p class="cap"> John Baldessari x Samsung </p>
   <p class="ref"> 2015 <br/>
-    Brass, festoon led, wiring </p>
-  <p class="ref"> A set of apparatus that supports the changing needs of mobile workers<br/>
-    <br/>
-    The retro-classic interior of the Raging Bull Chophouse in Shangrila Manila celebrates wood and metal craftsmanship in detail. The Caliper composed of 100 individually-crafted and layered metal calipers shaped like bull horns. The challenge for this design was figuring out the led detail and feeding the positive and negative current through the brass plate. <br/>
+    cotton, printed and stamped paper </p>
+  <p class="ref"> Visionaire 64 ART in collaboration with conceptual artist JOHN BALDESSARI marries modern technology with old-world processes, pop culture with high art.
+<br/><br/>
+The edition contains 10 loose 12x18 inch black &amp; white portraits with embossed color and silk screening interventions by John Baldessari. The case converts into a horizontal or vertical display using the built-in foldout stand.
+<br/>
   </p>
+  <iframe src="https://player.vimeo.com/video/108390265" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  <p class="image"></p>
   <img class="lazy image" data-original="../images/jb1.jpg" alt="NULL">
   <p class="image"></p>
   <img class="lazy image" data-original="../images/jb2.jpg" alt="NULL" style="width: 40vw;">
   <p class="image"></p>
   <img class="lazy image" data-original="../images/jb3.jpg" alt="NULL">
-  
+  <p class="image"></p>
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> 
   <script src="../jquery.lazyload.min.js"></script> 
   <script src="../nong-nong.js"></script> 
