--- a/projects/rhyo.html
+++ b/projects/rhyo.html
@@ -109,6 +109,10 @@
   </p>
   <iframe src="https://player.vimeo.com/video/235807445" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   <p class="image"></p>
+  <img class="lazy image" data-original="../images/rhyo1.jpg" alt="NULL">
+  <p class="image"></p>
+  <img class="lazy image" data-original="../images/rhyo2.png" alt="NULL">
+  <p class="image"></p>
   <p class="ref1"> EVIDENCE<br/>
     Light is made up of electromagnetic particles that travel in waves, the shorter the wavelength; the higher the energy. Specifically, blue light, which emits from any digital screen, has a very short wavelength, and therefore produces a higher amount of energy.<br/>
     Research shows that 43% of adult’s work required prolong use of digital devices and that 70% of adults who report regular use of digital device experienced what is called the symptoms of Digital eye strain: dry eyes, difficulty in focusing, headaches, blurred vision and back pain.<br/>
@@ -122,6 +126,12 @@
     <br/>
     <br/>
   </p>
+  <img class="lazy image" data-original="../images/rhyo3.jpg" alt="NULL">
+  <p class="image"></p>
+  <img class="lazy image" data-original="../images/rhyo4.jpg" alt="NULL">
+  <p class="image"></p>
+  <img class="lazy image" data-original="../images/rhyo5.jpg" alt="NULL">
+  <p class="image"></p>
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> 
   <script src="../jquery.lazyload.min.js"></script> 
   <script src="../nong-nong.js"></script> 
