--- a/projects/rhyo.html
+++ b/projects/rhyo.html
@@ -89,7 +89,7 @@
 <div id="wrapper">
   <div id="white"></div>
   <div id="top_space"></div>
-  <p class="image1"> <img src="../images/rhyo.jpg" alt="NULL"> </p>
+  <p class="image1"> <iframe src="https://player.vimeo.com/video/235807445" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> </p>
   <p class="cap"> Rhyo </p>
   <p class="ref"> 2017 </p>
   <p class="ref"> A tasklight timer that encourages the habit of taking breaks from digital screens.<br/>
@@ -107,10 +107,8 @@
     Redefining ‘in between’ spaces
     where people temporarily take ownership of the space, form relationships and interact with the changing environment. <br/>
   </p>
-  <iframe src="https://player.vimeo.com/video/235807445" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  <p class="image"></p>
-  <img class="lazy image" data-original="../images/rhyo1.jpg" alt="NULL">
-  <p class="image"></p>
+  <img class="lazy image" data-original="../images/rhyo1.jpg" alt="NULL" style="width: 40vw; padding-bottom: 2vw;">
+  <p class="image"><br/></p>
   <img class="lazy image" data-original="../images/rhyo2.png" alt="NULL">
   <p class="image"></p>
   <p class="ref1"> EVIDENCE<br/>
@@ -122,8 +120,6 @@
     <br/>
     Numerous studies have shown that by simply taking brief diversions from a task, not only lowers symptoms of digital eye strain, but dramatically increase productivity and improve one’s ability to focus on the task at hand.<br/>
     Light is one of the most natural ways we experience the passage of time as our body’s physical, mental and behavioral changes respond primarily to the light and darkness of our environment. <br/>
-    <br/>
-    <br/>
     <br/>
   </p>
   <img class="lazy image" data-original="../images/rhyo3.jpg" alt="NULL">
