smaller images and text spacing changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+
 <body>
 
 <div id="mySidenav" class="sidenav"> <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -12,7 +14,7 @@
   <p class="who content"> <br/>
     hello@nong-nong.com<br/>
     http://nong-nong.com<br/>
-    +44(0)7451062074<br/>
+    +66(0)843317037<br/>
     <br/>
     <br/>
     <br/>
@@ -133,7 +135,7 @@
   </div>
 </div>
 
-<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> 
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="jquery.lazyload.min.js"></script> 
 <script src="nong-nong.js"></script>
 </body>
