--- a/projects/landingspace.html
+++ b/projects/landingspace.html
@@ -106,6 +106,8 @@
     Redefining ‘in between’ spaces
     where people temporarily take ownership of the space, form relationships and interact with the changing environment. <br/>
   </p>
+  <p class="image"> <iframe src="https://player.vimeo.com/video/251425180" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> </p>
+  <p class="image"></p>
   <img class="lazy image" data-original="../images/ls1.jpg" alt="NULL">
   <p class="image"></p>
   <img class="lazy image" data-original="../images/ls2.jpg" alt="NULL">
