--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
-<link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
 
 <body>
 
@@ -96,43 +95,56 @@
       <p class="year">2017</p>
       <a href="projects/landingspace.html"><img class="lazyFade" src="images/ls_cap900.gif">
       <p class="name">Landing Space</p>
-      </a></div>
+      </a>
+	</div>
     <div class="item two">
       <p class="year">2017</p>
       <a href="projects/rhyo.html"><img class="lazyFade" src="images/7.jpg">
       <p class="name">Rhyo</p>
-      </a></div>
+      </a>
+	</div>
     <div class="item three">
       <p class="year">2015</p>
       <a href="projects/caliper.html"><img class="lazyFade" src="images/c1.jpg">
       <p class="name">Caliper Lighting</p>
-      </a></div>
+      </a>
+	</div>
     <div class="item four">
       <p class="year">2015</p>
       <a href="projects/jbaldessari.html"><img class="lazyFade" src="images/johnbaldessari.jpg">
       <p class="name">John Baldessari x Samsung</p>
-      </a></div>
+	  </a>
+	</div>
     <div class="item five">
       <p class="year">2013</p>
       <a href="projects/forevergold.html"><img class="lazyFade" src="images/fgold.jpg">
       <p class="name">Forever Gold</p>
-      </a></div>
+      </a>
+	</div>
     <div class="item six">
       <p class="year">2013</p>
       <a href="projects/collection13.html"><img class="lazyFade" src="images/8_1.jpg">
       <p class="name">Collection 13</p>
-      </a></div>
+      </a>
+	</div>
     <div class="item seven">
       <p class="year">2012</p>
       <a href="projects/veho.html"><img class="lazyFade" src="images/veho.JPG">
       <p class="name">Veho Helmet</p>
-      </a></div>
+      </a>
+	</div>
     <div class="item eight">
       <p class="year">2012</p>
       <a href="projects/piccolo.html"><img class="lazyFade" src="images/pt1.jpg">
       <p class="name">Piccolo Teatro</p>
-      </a></div>
+      </a>
+	</div>
   </div>
+</div>
+
+<!-- Footer note & more viable navigation -->
+<div id="footer">
+	&#9400;&nbsp;Kornpetch&nbsp;Chotipatoomwan 2017-, All rights reserved.
 </div>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
